--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "next": "^10.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
@@ -21,7 +21,7 @@
     "@typescript-eslint/parser": "^5.9.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
+    "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "^8.3.0",
     "typescript": "4.5.4"
   }
